--- a/html/app/sass/pages/_page_builder.scss
+++ b/html/app/sass/pages/_page_builder.scss
@@ -301,6 +301,16 @@
             }
         }
     }
+
+    .so-panel{
+        margin-bottom: 20px;
+        @include tablet{
+            margin-bottom: 30px;
+        }
+    }
+    .panel-last-child{
+        margin-bottom: 0;
+    }
 }
 
 
